--- a/assign/GNUmakefile.in
+++ b/assign/GNUmakefile.in
@@ -86,6 +86,13 @@ assign: ${MAKEFILE_IN} ${DEPLIBS} ${OBJS}
 	
 install: $(INSTALL_LIBEXECDIR)/assign 
 
+# XXX: This is a hack having to do with the fact that there have, historically,
+# been both a config.c and a config.cc, and CVS doesn't always delete config.c
+# on an update. This confuses make. So, here's an explicit rule to build
+# config.o from config.cc (note that the dependencies for config.cc are below)
+config.o:
+	${CXX} -c -o $@ ${CXXFLAGS} $(SRCDIR)/config.cc
+
 clean:
 	-${RM} *.o assign 
 
