--- a/protogeni/lib/GNUmakefile.in
+++ b/protogeni/lib/GNUmakefile.in
@@ -16,10 +16,11 @@ LIB_SCRIPTS     = GeniDB.pm GeniUser.pm  \
 		  GeniTicket.pm GeniSliver.pm GeniCredential.pm \
 		  GeniComponent.pm GeniCH.pm GeniEmulab.pm \
 		  GeniAuthority.pm GeniCertificate.pm GeniAggregate.pm \
-		  GeniUtil.pm GeniRegistry.pm GeniUsage.pm GeniHRN.pm
+		  GeniUtil.pm GeniRegistry.pm GeniUsage.pm GeniHRN.pm \
+		  GeniSES.pm
 SBIN_SCRIPTS	= plabnodewrapper plabslicewrapper
 
-SCRIPTS		= addnode.pl
+SCRIPTS		= addnode.pl genischemacheck.pl
 
 # These scripts installed setuid, with sudo. 
 SETUID_SBIN_SCRIPTS  = plabnodewrapper plabslicewrapper
@@ -32,9 +33,22 @@ all:	$(LIB_SCRIPTS) $(SBIN_SCRIPTS) $(SCRIPTS)
 
 include $(TESTBED_SRCDIR)/GNUmakerules
 
-install: $(addprefix $(INSTALL_LIBDIR)/, $(LIB_SCRIPTS)) \
+install: install-schemacheck $(addprefix $(INSTALL_LIBDIR)/, $(LIB_SCRIPTS)) \
 	 $(addprefix $(INSTALL_SBINDIR)/, $(SBIN_SCRIPTS)) \
 	 $(addprefix $(INSTALL_DIR)/opsdir/lib/, $(OPS_LIBS))
+
+#
+# A check to see if this is a 'real' install. Kinda hacky, but as far as I can
+# tell, you can't put ifeq()'s inside of targets
+#
+ifeq ($(TBROOT),/usr/testbed)
+SCHEMACHECK= cd $(OBJDIR)/protogeni/lib && perl genischemacheck.pl
+else
+SCHEMACHECK= @echo "Skipping schema check, since prefix isn't /usr/testbed"
+endif
+install-schemacheck: genischemacheck.pl
+	@echo "Checking DB schema..."
+	$(SCHEMACHECK)
 
 control-install:
 
