Add script to generate the rspec schemata (also added in CVS so that things can be built without trang), and install them so that assign can find them when it needs them.

--- a/protogeni/GNUmakefile.in
+++ b/protogeni/GNUmakefile.in
@@ -11,7 +11,7 @@ SUBDIR		= protogeni
 
 include $(OBJDIR)/Makeconf
 
-SUBDIRS	= security xmlrpc lib scripts etc
+SUBDIRS	= security xmlrpc lib scripts etc rspec
 
 all:	all-subdirs
 
@@ -23,6 +23,7 @@ install:
 	@$(MAKE) -C lib install
 	@$(MAKE) -C scripts install
 	@$(MAKE) -C etc install
+	@$(MAKE) -C rspec install
 
 install-genischemacheck:
 	@$(MAKE) -C lib install-genischemacheck
