Add a simple slice embedding service, and a client side script to invoke it.

--- a/apache/httpd.conf.in
+++ b/apache/httpd.conf.in
@@ -1334,6 +1334,7 @@ SSLRequire ( %{SSL_CLIENT_S_DN_OU} ne "sslxmlrpc" )
 ScriptAlias /protogeni/xmlrpc/ch @prefix@/protogeni/xmlrpc/protogeni-ch.pl
 ScriptAlias /protogeni/xmlrpc/cm @prefix@/protogeni/xmlrpc/protogeni-cm.pl
 ScriptAlias /protogeni/xmlrpc/sa @prefix@/protogeni/xmlrpc/protogeni-sa.pl
+ScriptAlias /protogeni/xmlrpc/ses @prefix@/protogeni/xmlrpc/protogeni-ses.pl
 <Directory "@prefix@/www/protogeni">
 	SSLRequireSSL
 	Order deny,allow
