Ignore some additional non-code stuff.

--- a/.loc-ignore
+++ b/.loc-ignore
@@ -31,3 +31,12 @@ tool/svn/svn_load_dirs.pl
 copyrights 
 hyperviewer/hypviewer 
 www/sec-check
+www/tutorial
+sql
+doc
+www/doc
+GPL-COPYING
+LGPL-COPYING
+AGPL-COPYING
+TODO.plab
+MOVED-TO-WIKI
