When assign fails, spit back all its output as the result of the SES XMLRPC call.  There's a lot of it, but that's now the user's problem...

--- a/protogeni/lib/GeniSES.pm.in
+++ b/protogeni/lib/GeniSES.pm.in
@@ -91,9 +91,15 @@ sub Map($)
     print $reqfile $req;
     close $reqfile;
 
-    system( "$ASSIGN -q $adfilename -w $reqfilename > /dev/null 2>&1" ) and
-	return GeniResponse->Create( GENIRESPONSE_ERROR, undef,
-				     "Assign process failed" );
+    open( ASSIGN, "$ASSIGN -q $adfilename -w $reqfilename 2>&1 |" )
+	or return GeniResponse->Create( GENIRESPONSE_ERROR, undef,
+					"Assign process failed" );
+
+    my $assignverbosity = "";
+    while( <ASSIGN> ) {
+	$assignverbosity .= $_;
+    }
+    close ASSIGN;
 
     unlink $adfilename;
     unlink $reqfilename;
@@ -103,7 +109,9 @@ sub Map($)
 
     open( ANNOTATED, "<$annfilename" ) or
 	return GeniResponse->Create( GENIRESPONSE_ERROR, undef,
-				     "Could not read assign output" );
+				     "Failed to map topolgy:\n" .
+				     $assignverbosity );
+
     my $xml = "";
     while ( <ANNOTATED> ) {
 	$xml .= $_;
